[tool.poetry]
name = "proxyfinder"
version = "0.0.1-alpha1"
description = "New proxy finder and checker. Fork of https://github.com/bluet/proxybroker2"
authors = ["Alexander Bokanov <overhead.nerves@hmail.com>"]
repository = "https://github.com/onlyfanfuriks/proxyfinder"
# homepage = "http://proxyfinder.readthedocs.io/"
# documentation = "http://proxyfinder.readthedocs.io/"
license = "Apache-2.0"
readme = "README.md"
packages = []
include = ["proxyfinder/data/*.mmdb"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    # 'Environment :: Web Environment',
    'Intended Audience :: Developers',
    # 'Programming Language :: Python :: 3.8',
    # 'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Internet :: WWW/HTTP :: Indexing/Search',
    # 'Topic :: Internet :: Proxy Servers',
    'License :: OSI Approved :: Apache Software License',
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"
attrs = "^23.1.0"
maxminddb = "^2.3.0"
cachetools = "^5.3.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
pytest-runner = "^6.0.0"
sphinx-immaterial = "^0.11.4"
pytest-isort = "^3.1.0"
pytest-flake8 = "^1.1.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
proxyfinder = "proxyfinder.cli:cli"

[tool.black]
target-version = ['py310']
line-length = 88
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv         # virtualenv
    | build
    | dist
  )
)
'''

[tool.pytest.ini_options]
flake8-ignore = ['*.py']
isort_ignore = ['*.py']
